jwt, worker wallet verification, plus some code changes/cleanups
