# scheduler/app/docs/swagger.json
@@ -263,31 +263,6 @@
                 }
             }
         },
-        "/api/payments/process": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "payments"
-                ],
-                "summary": "Process pending payments",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.ProcessPaymentsResponse"
-                        }
-                    },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/api/pull": {
             "get": {
                 "produces": [
@@ -599,14 +574,6 @@
                     "type": "integer"
                 },
                 "total_items": {
-                    "type": "integer"
-                }
-            }
-        },
-        "main.ProcessPaymentsResponse": {
-            "type": "object",
-            "properties": {
-                "processed_count": {
                     "type": "integer"
                 }
             }
